# pkg/api/account_converters.go
@@ -2,7 +2,9 @@ package api
 
 import (
 	"fmt"
+	"github.com/shopspring/decimal"
 	imgGenerator "github.com/tonkeeper/opentonapi/pkg/image"
+	"github.com/tonkeeper/opentonapi/pkg/references"
 	"sort"
 
 	"github.com/tonkeeper/tongo/abi"
@@ -57,11 +59,7 @@ func convertToRawAccount(account *core.Account) (oas.BlockchainRawAccount, error
 		}
 	}
 	if account.ExtraBalances != nil {
-		balances := make(map[string]string, len(account.ExtraBalances))
-		for key, value := range account.ExtraBalances {
-			balances[fmt.Sprintf("%v", key)] = fmt.Sprintf("%v", value)
-		}
-		rawAccount.ExtraBalance = oas.NewOptBlockchainRawAccountExtraBalance(balances)
+		rawAccount.ExtraBalance = convertExtraCurrencies(account.ExtraBalances)
 	}
 	if account.Code != nil && len(account.Code) != 0 {
 		rawAccount.Code = oas.NewOptString(fmt.Sprintf("%x", account.Code[:]))
@@ -70,6 +68,24 @@ func convertToRawAccount(account *core.Account) (oas.BlockchainRawAccount, error
 		rawAccount.Data = oas.NewOptString(fmt.Sprintf("%x", account.Data[:]))
 	}
 	return rawAccount, nil
+}
+
+func convertExtraCurrencies(extraBalances map[uint32]decimal.Decimal) []oas.ExtraCurrency {
+	res := make([]oas.ExtraCurrency, 0, len(extraBalances))
+	for k, v := range extraBalances {
+		cur := oas.ExtraCurrency{
+			ID:       int32(k),
+			Amount:   v.String(),
+			Decimals: 9, // TODO: or replace with default const
+		}
+		meta, ok := references.ExtraCurrencies[int32(k)]
+		if ok {
+			cur.Name.SetTo(meta.Name)
+			cur.Decimals = meta.Decimals
+		}
+		res = append(res, cur)
+	}
+	return res
 }
 
 func convertToAccount(account *core.Account, ab *addressbook.KnownAddress, state chainState) oas.Account {
